--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,14 @@
         android:theme="@style/AppTheme">
         <activity android:name=".Registeractivity" />
         <activity android:name=".startatrip" />
-        <activity android:name=".loginclick" />
+        <activity android:name=".loginclick" >
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
 
     </application>
